Travis-CI: install matscipy

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os:
 install:
   - "pip install --user numpy"
   - "pip install --user ase"
+  - "git clone https://github.com/libAtoms/matscipy.git; cd matscipy; pip install --user ."
 julia:
   - release
   - nightly
