TravisCI: install -> before_install

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: julia
 os:
   - linux
   - osx
-install:
+before_install:
   - "pip install --user numpy"
   - "pip install --user ase"
   - "git clone https://github.com/libAtoms/matscipy.git; cd matscipy; pip install --user ."
