TravisCI: pip install scipy

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ os:
   - osx
 before_install:
   - "pip install --user numpy"
+  - "pip install --user scipy"
   - "pip install --user ase"
   - "git clone https://github.com/libAtoms/matscipy.git; cd matscipy; pip install --user . ; cd .. ; rm -rf matscipy"
 julia:
