--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ os:
   - linux
   - osx
 before_install:
-  - "pip install --user numpy"
-  - "pip install --user scipy"
+  - "pip install --only-binary=numpy,scipy numpy scipy"
   - "pip install --user ase"
   - "git clone https://github.com/libAtoms/matscipy.git; cd matscipy; pip install --user . ; cd .. ; rm -rf matscipy"
 julia:
