--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,11 @@ language: julia
 os:
   - linux
   - osx
-before_install:
-  - "pip install --only-binary=numpy,scipy numpy scipy"
-  - "pip install --user ase"
-  - "git clone https://github.com/libAtoms/matscipy.git; cd matscipy; pip install --user . ; cd .. ; rm -rf matscipy"
 julia:
   - release
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("JuLIP"); Pkg.test("JuLIP"; coverage=true)'
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'ENV["PYTHON"]=""; Pkg.build("PyCall"); using Conda; Conda.add("NumPy"); Conda.add("SciPy"); Conda.add("pip"); pip = joinpath(Conda.BINDIR, "pip"); run(`$pip install ase`); run(`$pip install -e git+https://github.com/libAtoms/matscipy#egg=matscipy`); Pkg.clone(pwd()); Pkg.build("JuLIP"); Pkg.test("JuLIP"; coverage=true)'
