--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ notifications:
   email: false
 
 script:
+  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'ENV["PYTHON"]=""; Pkg.add("PyCall"); Pkg.add("Conda"); using Conda; Conda.add("NumPy"); Conda.add("SciPy"); Conda.add("pip"); pip = joinpath(Conda.BINDIR, "pip"); run(`$pip install ase`); run(`$pip install -e git+https://github.com/libAtoms/matscipy#egg=matscipy`); Pkg.clone(pwd()); Pkg.build("JuLIP"); Pkg.checkout("Dierckx"); Pkg.test("JuLIP"; coverage=true)'
