--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,6 @@ julia:
   - 0.6
 
 addons:
-  apt:
-    packages:
-    - gfortran
 
 notifications:
   email: false
@@ -24,4 +21,4 @@ before_install:
 
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.add("Conda"); using Conda; Conda.add("NumPy"); Conda.add("SciPy"); Pkg.clone(pwd()); Pkg.build("JuLIP"); Pkg.test("JuLIP"; coverage=true)'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("JuLIP"); Pkg.test("JuLIP"; coverage=true)'
