--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ julia:
   - 0.6
 
 addons:
+  apt:
+    packages:
+    - gfortran
 
 notifications:
   email: false
@@ -17,8 +20,11 @@ env:
  - PYTHON=""
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install gcc; fi
+  # - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew update; fi
+  - if [ $TRAVIS_OS_NAME = osx ]; then brew cask uninstall oclint; fi
+  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
 
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("JuLIP"); Pkg.test("JuLIP"; coverage=true)'
+  - julia -e 'Pkg.clone("https://github.com/libAtoms/NeighbourLists.jl.git");
+     Pkg.clone(pwd()); Pkg.build("JuLIP"); Pkg.test("JuLIP"; coverage=true)'
