--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
 
 [compat]
 NeighbourLists = "≥ 0.3.0"
-julia = "0.7, 1"
+julia = "1"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
