fixed Project.toml compat

--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "JuLIP"
 uuid = "945c410c-986d-556a-acb1-167a618e0462"
-version = "0.7.2"
+version = "0.7.3"
 
 [deps]
 AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
@@ -24,7 +24,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
 
 [compat]
-NeighbourLists = "≥ 0.3.0"
+NeighbourLists = "0.3, 0.4"
 julia = "1"
 
 [extras]
