--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,8 @@ NeighbourLists = "≥ 0.5.0"
 julia = "1"
 
 [extras]
+ASE = "51974c44-a7ed-5088-b8be-3e78c8ba416c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 
 [targets]
-test = ["BenchmarkTools"]
+test = ["ASE", "BenchmarkTools"]
