a few more mods to tests + new derivative test for alloys

--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ julia = "1"
 [extras]
 ASE = "51974c44-a7ed-5088-b8be-3e78c8ba416c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [targets]
-test = ["ASE", "BenchmarkTools"]
+test = ["ASE", "BenchmarkTools", "Random"]
