--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,9 @@
 name = "JuLIP"
 uuid = "945c410c-986d-556a-acb1-167a618e0462"
-version = "0.11.0"
+version = "0.11.1"
 
 [deps]
+ACEbase = "14bae519-eb20-449c-a949-9c58ed33163e"
 AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
 Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
 CommonSubexpressions = "bbf7d656-a473-5ed7-a52c-81e309532950"
