--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,6 @@ Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
 CommonSubexpressions = "bbf7d656-a473-5ed7-a52c-81e309532950"
 DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
-Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 FunctionWrappers = "069b7b12-0de2-55c6-9aab-29f3d0a68a2e"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -33,6 +32,7 @@ ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 ACEbase = "0.1.5"
 DataDeps = "0.7"
 NeighbourLists = "≥ 0.5.0"
+Interpolations = "≥ 0.13.4"
 julia = "1"
 
 [extras]
