--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ CommonSubexpressions = "bbf7d656-a473-5ed7-a52c-81e309532950"
 DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
+ExtXYZ = "352459e4-ddd7-4360-8937-99dcb397b478"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 FunctionWrappers = "069b7b12-0de2-55c6-9aab-29f3d0a68a2e"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
