--- a/Project.toml
+++ b/Project.toml
@@ -32,9 +32,24 @@ ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 [compat]
 ACEbase = "0.2"
 DataDeps = "0.7"
-Interpolations = "≥ 0.13.4"
-NeighbourLists = "≥ 0.5.0"
+NeighbourLists = "0.5"
 julia = "1"
+AlgebraicMultigrid = "0.5"
+Calculus = "0.5"
+CommonSubexpressions = "0.2, 0.3"
+ExtXYZ = "0.1"
+ForwardDiff = "0.10"
+FunctionWrappers = "1"
+Interpolations = "0.13, 0.14"
+JSON = "0.21"
+LineSearches = "7"
+MacroTools = "0.5"
+Optim = "1.7"
+Reexport = "1" 
+Requires = "1"
+StaticArrays = "1"
+ZipFile = "0.10"
+OffsetArrays = "1"
 
 [extras]
 ASE = "51974c44-a7ed-5088-b8be-3e78c8ba416c"
