Fix failing CI due to np.float removal
Use older numpy to avoid errors due to removal of `np.float`. Can be reverted once a new ASE release is made on pip.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,7 +22,7 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - name: Install Python dependencies
-        run: pip3 install ase
+        run: pip3 install "numpy<1.24" ase
       - name: Add MolSim registry
         run: julia -e 'using Pkg; pkg"registry add https://github.com/JuliaMolSim/MolSim.git"'
       - uses: actions/cache@v1
