--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,10 +9,11 @@ jobs:
       matrix:
         version:
           - '1.6'
-          - '1.7'
+          - 'nightly'
         os:
           - ubuntu-latest
           - macOS-latest
+          - windows-latest
         arch:
           - x64
     steps:
