--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,6 @@ jobs:
         os:
           - ubuntu-latest
           - macOS-latest
-          - windows-latest
         arch:
           - x64
     steps:
@@ -37,6 +36,8 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
-        env:
-          DATADEPS_ALWAYS_ACCEPT: true
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3        
+#       - uses: julia-actions/julia-runtest@v1
+#         env:
+#           DATADEPS_ALWAYS_ACCEPT: true
