--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           julia --project=. -e 'using Pkg; Pkg.add("PyCall")'
-          PYTHON=$(julia --project=. -e 'using PyCall; print(PyCall.python)')
+          PYTHON=$(which $(julia --project=. -e 'using PyCall; print(PyCall.python)'))
           echo "Julia is using PYTHON=$PYTHON"
           $(dirname $PYTHON)/pip install "numpy<1.24" ase        
       - uses: actions/cache@v1
@@ -40,8 +40,8 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3        
-#       - uses: julia-actions/julia-runtest@v1
-#         env:
-#           DATADEPS_ALWAYS_ACCEPT: true
+#      - name: Setup tmate session
+#        uses: mxschmitt/action-tmate@v3        
+      - uses: julia-actions/julia-runtest@v1
+        env:
+          DATADEPS_ALWAYS_ACCEPT: true
