--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,6 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
+          - '1.6'
           - '1.7'
           - '1.8'
           - '1.9'
@@ -24,7 +25,7 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - name: Add MolSim registry
-        run: julia -e 'using Pkg; pkg"registry add General"; pkg"registry add https://github.com/JuliaMolSim/MolSim.git"'
+        run: julia -e 'using Pkg; pkg"registry add General"; pkg"registry add https://github.com/ACEsuit/ACEregistry.git"'
       - name: Install Python dependencies
         run: |
           julia --project=. -e 'using Pkg; Pkg.add("PyCall")'
